[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["ukastsiukevich <grun_gespenst@tut.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.11.13"
beautifulsoup4 = "^4.13.3"
flake8 = "^7.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
